--- a/style.css
+++ b/style.css
@@ -108,3 +108,68 @@ display: block;
 #shop3:hover>.shop2 ul{
     visibility: visible
 }
+
+#second-part div.contain p:hover{
+color: red;
+cursor: pointer;
+}
+#second-part nav li ul {
+    text-decoration: none;
+    list-style-type: none;
+    display: none;
+}
+#second-part nav li #ul {
+    position: absolute;
+    margin-left: 10px;
+    margin-top: -140px;
+}
+#second-part nav li ul{
+    margin-left: -210px;
+}
+#second-part nav li ul:hover li{
+    display: block;
+}
+#second-part.images{
+    display: row;
+}
+#second-part div.image1:hover{
+   transform: scale(1.1);
+   z-index: 1;
+    cursor: pointer;
+}
+#second-part div.image2:hover{
+    transform: scale(1.1);
+    z-index: 1;
+     cursor: pointer;
+ }
+ #second-part div.image3:hover{
+    transform: scale(1.1);
+    z-index: 1;
+     cursor: pointer;
+ }
+ #second-part div.image4:hover{
+    transform: scale(1.1);
+    z-index: 1;
+     cursor: pointer;
+
+ }
+ #second-part div.image5:hover{
+    transform: scale(1.1);
+    z-index: 1;
+     cursor: pointer;
+ }
+ #second-part div.image6:hover{
+    transform: scale(1.1);
+    z-index: 1;
+     cursor: pointer;
+ }
+ #second-part div.image7:hover{
+    transform: scale(1.1);
+    z-index: 1;
+     cursor: pointer;
+ }
+ #second-part div.image8:hover{
+    transform: scale(1.1);
+    z-index: 1;
+     cursor: pointer;
+ }
