--- a/style.css
+++ b/style.css
@@ -105,6 +105,7 @@ display: block;
 
 }
 
+
 #shop3:hover>.shop2 ul{
     visibility: visible
 }
@@ -139,6 +140,7 @@ cursor: pointer;
     padding-left: 10px;
     cursor: pointer;
 }
+
 #second-part.images{
     display: row;
 }
@@ -203,3 +205,33 @@ cursor: pointer;
    margin-left: 800px;
    margin-top: -340px;
  }
+  .images{
+display: flex;
+justify-content: space-evenly;
+ }
+ #fourth-part div.title{
+     margin-left: 580px;
+    
+ }
+ .parallax{
+     background-image: url("https://fiorello.qodeinteractive.com/wp-content/uploads/2018/05/h3-background-img.jpg");
+     background-attachment: fixed;
+     width: 100%;
+     height: 540px;
+     background-repeat: no-repeat;
+     background-size: auto;
+     background-position: center;
+     
+ }
+.image1 img:hover  {
+    transform: scale(1.1);
+    cursor: pointer;
+}
+.image2 img:hover  {
+    transform: scale(1.1);
+    cursor: pointer;
+}
+.image3 img:hover  {
+    transform: scale(1.1);
+    cursor: pointer;
+}
