--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
 .headernav {
     margin-top: -58px;
     padding-bottom: 35px;
-    padding-right: 35px
+    padding-right: 35px;
+    
 }
 .headernav a{
     color: black;
@@ -17,12 +18,14 @@
     width: 212px;
     margin-left: 47px;
     margin-top: -7px;
+   
 }
 
 .menu {
     display: flex;
     justify-content: end;
     padding-right: 20px;
+    
 }
 
 .menu>ul>li>a {
@@ -34,6 +37,7 @@
     position: relative;
     font-family: 'Montserrat', sans-serif;
     font-size: 13px;
+    
 }
 
 .lists>li {
