--- a/style.css
+++ b/style.css
@@ -40,6 +40,15 @@
     
 }
 
+ul>li {
+    cursor: pointer;
+    
+}
+ul>li:hover{
+    cursor: pointer;
+    text-decoration: underline
+}
+
 .lists>li {
     position: relative;
 }
