--- a/shop-list.css
+++ b/shop-list.css
@@ -1,3 +1,4 @@
+
 .headernav {
     margin-top: -58px;
     padding-bottom: 35px;
@@ -119,6 +120,9 @@ ul>li:hover{
 
 .fa-shopping-bag{
     font-size: 20px;
+}
+body{
+    overflow-x: hidden;
 }
 #shop-list{
     width: 1590px;
