--- a/basket.css
+++ b/basket.css
@@ -211,3 +211,17 @@ cursor: pointer;
     text-decoration: none;
     list-style-type: none
 }
+
+.footer{
+    background-color: papayawhip;
+   
+    height: 400px;
+margin-top: 200px;
+    display: flex;
+    justify-content: space-evenly
+}
+.foot:hover {
+    color: red ;
+    cursor: pointer ;
+    text-decoration: none
+}
